switch About background back to "../pics", update two js file to "BimmerClub/pics"

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,5 +1,5 @@
 .main_about {
-    background-image: url("BimmerClub/pics/Background_Portrait_3.jpg");
+    background-image: url("../pics/Background_Portrait_3.jpg");
     background-size: 100%;
     background-position: center; 
 
